# md-bridge

./: .all-contributorsrc  .dockerignore  .gitattributes  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTOR-WALKTHROUGH.md  README.md  SECURITY.md  VERIFY_DELIVERY.md  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  render.yaml
.github/: dependabot.yml  maintainer-review-prompt.md  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-update-stale-prs.yml  board-sync.yml  ci.yml  codeql.yml  credit-contributor.yml  dependabot-auto-merge.yml  docker-publish.yml  issue-claim.yml  lighthouse.yml  maintainer-review.yml  pages.yml  pr-auto-assign.yml  pr-linked-issue.yml  release-drafter.yml  scorecard.yml  semantic-pr.yml  update-snapshots.yml  visual-regression.yml
apps/api/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/app/: __init__.py  concurrency.py  config.py  errors.py  export_openapi.py  limits.py  logging_filters.py  main.py  rate_limit.py  security.py  settings.py
apps/api/app/routes/: convert.py  inspect.py
apps/api/app/schemas/: convert.py
apps/api/app/services/: formats.py  inspect.py  md_to_docx.py  md_to_pdf.py  mupdf_log.py  ocr.py  packages_loader.py  pdf_to_md.py  skills_loader.py  themes.py
apps/api/tests/: conftest.py
apps/api/tests/fixtures/: SOURCES.md  _gen_malformed.py
apps/api/tests/integration/: test_abbreviations.py  test_access_log.py  test_auth.py  test_autolink.py  test_blockquote.py  test_caption_alt.py  test_cluster_headings.py  test_code_in_list_item.py  test_convert_routes.py  test_definition_lists.py  test_escape_literals.py  test_figure_anchors.py  test_footnotes.py  test_furniture.py  test_grid_tables.py  test_health.py  test_highlight.py  test_image_link_anchors.py  test_image_ocr.py  test_image_width_hints.py  test_inline_images.py  test_inspect_pdf.py  test_invalid_options.py  test_invalid_pdf.py  test_istqb.py  test_language_detection.py  test_line_breaks.py  test_list_spacing.py  test_md_to_docx.py  test_md_to_pdf.py  test_md_to_pdf_egress.py  test_multiparagraph_list.py  test_mupdf_stderr.py  test_nested_ordered_lists.py  test_no_raw_html.py  test_ocr_page_cap.py  test_pdf_to_md.py  test_rate_limit.py  test_smart_typography.py  test_strikethrough.py  (+8 more)
apps/api/tests/unit/: test_abbreviations.py  test_blockquote.py  test_callouts.py  test_caption_alt.py  test_concurrency.py  test_containers.py  test_convert_links.py  test_definition_lists.py  test_del_tasklist.py  test_egress_policy.py  test_emit_html.py  test_errors.py  test_export_openapi.py  test_figure_anchors.py  test_formats_registry.py  test_front_matter.py  test_furniture.py  test_grid_tables.py  test_heading_anchors.py  test_image_link_anchors.py  test_image_ocr_candidates.py  test_image_ocr_service.py  test_image_width_hints.py  test_list_continuation.py  test_list_spacing.py  test_logging_filters.py  test_mark_render.py  test_md_to_pdf_helpers.py  test_mermaid_render.py  test_mupdf_log.py  test_nested_ordered_lists.py  test_normalize_span_text.py  test_ocr.py  test_ocr_figure.py  test_ocr_lang.py  test_ocr_page_cap.py  test_ocr_service.py  test_openapi.py  test_ordered_marker.py  test_packages_loader.py  (+12 more)
apps/web/: .gitignore  Dockerfile  audit.mjs  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts
apps/web/audit-results/: _.json  _about.json  _convert_md-to-pdf.json  _convert_pdf-to-md.json
apps/web/e2e/: audit.spec.ts  batch.spec.ts  format-hub-docx.spec.ts  format-hub.spec.ts  history.spec.ts  i18n-workshop.spec.ts  istqb.spec.ts  language.spec.ts  options.spec.ts  page-setup.spec.ts  pdf-preview.spec.ts  preferences.spec.ts  presets.spec.ts  read_docx.py  read_pdf.py  reduced-motion.spec.ts  theme-picker.spec.ts  themes.spec.ts  visual.spec.ts
apps/web/src/: App.css  App.tsx  main.tsx
apps/web/src/components/: BatchPanel.css  BatchPanel.tsx  Button.css  Button.tsx  ComparePanes.css  ComparePanes.tsx  DiagnosticPanel.css  DiagnosticPanel.tsx  DropZone.css  DropZone.tsx  FormatMatrix.css  FormatMatrix.tsx  MarkdownPreview.css  MarkdownPreview.tsx  OptionsPanel.css  OptionsPanel.tsx  PageSetupPanel.css  PageSetupPanel.tsx  PresetChips.css  PresetChips.tsx  RecentPanel.css  RecentPanel.tsx  Segmented.css  Segmented.tsx  SettingRow.tsx  Spinner.css  Spinner.tsx  Switch.tsx  ThemePicker.css  ThemePicker.tsx  ThemeToggle.css  ThemeToggle.tsx  ThemedPreview.tsx  Toast.tsx  pageSetup.ts  setting-controls.css
apps/web/src/hooks/: useBatchConvert.ts  useBatchZip.ts  useFormats.ts  useHistory.ts  usePrefs.ts  usePresets.ts  useThemes.ts
apps/web/src/i18n/: dictionaries.ts  index.tsx  workshop.ts
apps/web/src/lib/: api-types.ts  api.ts  prefs.ts  (+8 more)
apps/web/tests/: setup.ts
deployment/oracle-cloud/: Caddyfile.ci  Caddyfile.example  README.md  bootstrap.sh
deployment/render/: README.md
docs/: API.md  PAIR_LOG.md  accessibility-audit.md  api-recipes.md  architecture.md  deployment-other.md  faq.md  getting-started.es.md  getting-started.md  getting-started.pt.md  heuristics.md  index.es.md  index.md  index.pt.md  scorecard-exceptions.md
docs/architecture/: adr-001-markdown-dialect.md
docs/design/: README.md  design-thinking.html  index.md
docs/design/themes/: README.md
scripts/: py.mjs  smoke.py
tests/: conftest.py  pytest.ini
tests/golden/: ISTQB-CTAL-AT-Syllabus-v2.0_EN_.md  arxiv-2207.09238-formal-algorithms-transformers.md  code-sample.md  istqb-ctal-ta-syllabus-en.md  wikipedia-markdown-en.md  wikipedia-markdown-ja.md  wikipedia-pdf-en.md
tests/regression/: test_code_blocks_regression.py  test_fixture_corpus_regression.py  test_istqb_regression.py  test_md_to_docx_regression.py  test_md_to_pdf_regression.py  test_pdf_to_md_regression.py  test_theme_visual_regression.py  test_zzz_cleanup.py
tests/regression/golden/: md-to-docx-sample.docx
tests/unit/: test_heuristics.py  test_page_setup_mapping.py  test_renderer_input_dialect.py
(+63 files in other folders)
