[project]
name = "md-bridge-api"
version = "0.1.0"
description = "FastAPI backend for md-bridge, a self-hosted document converter. Wraps the pdf-to-markdown and markdown-to-pdf packages and exposes them as deterministic HTTP endpoints. The architecture welcomes new format pairs as contributions land."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    # python-multipart 0.0.27+ closes GHSA-mj87-hwqh-73pj, GHSA-pp6c-gr5w-3c5g,
    # GHSA-wp53-j4wj-2cfg (malicious-input resource exhaustion).
    "python-multipart>=0.0.27",
    "PyMuPDF>=1.24",
    # pypdf 6.10.2+ closes 22 GHSAs accumulated through the 5.x and 6.x lines
    # (XMP exhaustion, FlateDecode/startxref long-runtimes, outline loops).
    "pypdf>=6.10.2",
    # markdown 3.8.1+ closes GHSA-5wmx-573v-2qwq (uncaught exception).
    "markdown>=3.8.1",
    "playwright>=1.49",
    # python-docx renders Markdown -> DOCX (#60). Pure Python, no native
    # dependency, so it adds nothing to the Docker image beyond the wheel. Pinned
    # below the next major because the committed golden depends on its XML output;
    # a minor bump is regenerated via --update-golden, a major is reviewed.
    "python-docx>=1.2,<2",
    # markdown-to-pdf parses YAML front matter with safe_load (#150). PyYAML is
    # already in the tree transitively; declared directly so the runtime image
    # carries it rather than relying on an indirect pin.
    "PyYAML>=6.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.13",
    "Pillow>=11.0",
]

dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.15",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "unit: pure-function tests (no I/O, no HTTP)",
    "integration: TestClient-driven endpoint tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
# Conservative starting set. Expand once the codebase passes cleanly:
#   E   pycodestyle errors
#   F   pyflakes (unused imports, undefined names)
#   W   pycodestyle warnings
#   I   isort (import ordering)
#   UP  pyupgrade (modernize syntax to target-version)
#   B   flake8-bugbear (common bug patterns)
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line too long; handled by the formatter, not enforced
]

[tool.ruff.lint.per-file-ignores]
"apps/api/tests/**" = ["B011"]  # asserts in tests are fine
"tests/**" = ["B011"]
"apps/api/app/routes/**" = ["B008"]  # FastAPI uses File()/Form() as default args by design
